# Maya-Plugin-for-Elvish-Render

./: README.md
MayaExporterForER/: MayaExporterForER.sln
MayaExporterForER/MayaExporterForER/: CamaraWriter.cpp  CamaraWriter.h  DagNodeWriter.cpp  DagNodeWriter.h  DirectLightWriter.cpp  DirectLightWriter.h  ER_RenderViewCmd.mel  LightWriter.cpp  LightWriter.h  MayaExporterForER.cpp  MayaExporterForER.h  MayaExporterForER.vcxproj  MayaExporterForERCmd.cpp  MeshWriter.cpp  MeshWriter.h  Options.txt  PointLightWriter.cpp  PointLightWriter.h  Render.cpp  Render.h  SpotLightWriter.cpp  sample.ess  stringprintf.cc
MayaExporterForER/MayaExporterForER/Debug/lib/: OpenMayaRender.lib  QtCore4.lib  QtDesigner4.lib  QtDesignerComponents4.lib  QtHelp4.lib  QtMultimedia4.lib  QtNetwork4.lib  QtScript4.lib  QtScriptTools4.lib  QtTest4.lib  QtXmlPatterns4.lib  adp_core-2_5.lib  adp_data-2_5.lib  adp_service_opczip-2_5.lib  adp_toolkit-2_5.lib  libHalf.lib  libIlmThread.lib  libmocap.lib
MayaExporterForER/MayaExporterForER/Debug/lib/x86/: eiAPI.lib  eiCORE.lib  eiIMG.lib  eiSHADER.lib  gamma.lib
MayaExporterForER/MayaExporterForER/Debug/shaders/: gamma.lib
MayaExporterForER/MayaExporterForER/include/eiAPI/: CMakeLists.txt  EGGCLIST  ei.c  ei_api.h  ei_approx.c  ei_approx.h  ei_base_bucket.c  ei_buffer.h  ei_camera.c  ei_connection.c  ei_data_buffer.c  ei_data_buffer.h  ei_dbg_canvas.c  ei_dbg_canvas.h  ei_disc_object.h  ei_finalgather.h  ei_globillum.h  ei_hair_object.c  ei_hair_object.h  ei_image.h  ei_instance.h  ei_nodesys.c  ei_nodesys.h  ei_options.h  ei_output.c  ei_output.h  ei_parser.ll  ei_parser.yy  ei_parser_context.cpp  ei_photon.h  ei_poly_object.c  ei_rayhair.c.egg  ei_raytracer.c.egg  ei_raytracer.h  ei_renderer.c  ei_renderer.h  ei_sampler.c  ei_scenemgr.c  ei_scenemgr.h  ei_shader.h  (+5 more)
MayaExporterForER/MayaExporterForER/include/eiAPI/UnitTests/: CMakeLists.txt  ei_approx_grid_unittest.h  ei_displace_unittest.h  ei_dof_unittest.h  ei_env_unittest.h  ei_hair_unittest.h  ei_imager_unittest.h  ei_raytracer_hair_unittest.h  ei_texture_filter_unittest.h  ei_vertex_color_unittest.h
MayaExporterForER/MayaExporterForER/include/eiCORE/: EGGCLIST  ei_algorithm.c  ei_array.c  ei_atomic_ops.h  ei_base.h  ei_config.c  ei_core.c  ei_data_table.h  ei_database.c.egg  ei_dataflow_internal.h.egg  ei_datamap.c  ei_filesys.c.egg  ei_filesys_internal.h.egg  ei_fixed_pool.h  ei_jobmgr.c.egg  ei_list.c  ei_list.h  ei_matrix2.h  ei_message.h  ei_mgr_worker.c.egg  ei_mgr_worker.h  ei_network.c  ei_platform.h  ei_plugsys.c  ei_qmc_data.h  ei_range.h  ei_rect.h  ei_rwlock.c  ei_rwlock.h  ei_slist.h  ei_srv_worker.h  ei_table.c  ei_table.h  ei_timer.c  ei_vector.h  ei_verbose.c  ei_verbose.h
MayaExporterForER/MayaExporterForER/include/eiIMG/: CMakeLists.txt  ei_bmp.c  ei_hdr.c  ei_hdr.h  ei_img.h
MayaExporterForER/MayaExporterForER/include/eiSHADER/: ei_ao.cpp  ei_bump.cpp  ei_dof.cpp  ei_glass.cpp  ei_opaque.cpp  ei_photon.cpp  ei_plastic.cpp  ei_pointlight.cpp  ei_spotlight.cpp  ei_substrate.cpp  ei_uber.cpp
MayaExporterForER/MayaExporterForER/include/maya/: M3dView.h  MAnimControl.h  MAnimMessage.h  MAnimUtil.h  MArrayDataHandle.h  MClothConstraintCmd.h  MClothControl.h  MClothParticle.h  MClothTypes.h  MColor.h  MCommandMessage.h  MCommandResult.h  MD3D9Renderer.h  MDGModifier.h  MDagMessage.h  MDataBlock.h  MDataHandle.h  MDrawProcedureBase.h  MDynamicsUtil.h  MFStream.h  MFileObject.h  MFnCamera.h  MFnCameraSet.h  MFnComponent.h  MFnDagNode.h  MFnData.h  MFnDependencyNode.h  MFnFluid.h  MFnFreePointTriadManip.h  MFnMesh.h  MFnNIdData.h  MFnNumericData.h  MFnNurbsCurve.h  MFnPlugin.h  MFnRotateManip.h  MFnSingleIndexedComponent.h  MFnSubd.h  MFnTransform.h  MGeometryList.h  MGlobal.h  (+43 more)
trunk/MayaExporterForER/MayaExporterForER/: CamaraWriter.cpp  CamaraWriter.h  DagNodeWriter.cpp  DagNodeWriter.h  DirectLightWriter.cpp  DirectLightWriter.h  ER_RenderViewCmd.mel  LightWriter.cpp  LightWriter.h  MayaExporterForER.cpp  MayaExporterForER.h  MayaExporterForER.vcxproj  MayaExporterForERCmd.cpp  MeshWriter.cpp  MeshWriter.h  OptionType.h  PointLightWriter.cpp  PointLightWriter.h  ReadMe.txt  Render.cpp  Render.h  SpotLightWriter.cpp  SpotLightWriter.h  stringprintf.h
trunk/MayaExporterForER/MayaExporterForER/Debug/: MayaExporterForER.mll
trunk/MayaExporterForER/MayaExporterForER/Debug/lib/: AdCoreUnits-2_0.lib  Cloth.lib  IMFbase.lib  Image.lib  OpenMayaFX.lib  QtCLucene4.lib  QtDeclarative4.lib  QtOpenGL4.lib  QtSql4.lib  QtSvg4.lib  QtWebKit4.lib  QtXml4.lib  libIex.lib  libImath.lib  libawxml2.lib  libzlib.lib  python26.lib  qtmain.lib  synHub.lib
trunk/MayaExporterForER/MayaExporterForER/include/eiAPI/: ei.h  ei_api.c  ei_attributes.c  ei_attributes.h  ei_base_bucket.h  ei_bsp.c.egg  ei_bsp.h  ei_buffer.c  ei_camera.h  ei_connection.h  ei_disc_object.c  ei_element.c  ei_element.h  ei_finalgather.c  ei_globillum.c  ei_image.c  ei_instance.c  ei_instgroup.c  ei_instgroup.h  ei_light.c  ei_light.h  ei_map.c  ei_map.h  ei_material.c  ei_material.h  ei_noise.h  ei_noise_table.h  ei_object.c  ei_object.h  ei_options.c  ei_parser_context.hpp  ei_photon.c  ei_poly_object.h  ei_proc_object.c  ei_proc_object.h  ei_rayhair.h  (+11 more)
trunk/MayaExporterForER/MayaExporterForER/include/eiCORE/: CMakeLists.txt  ei_algorithm.h  ei_array.h  ei_assert.h  ei_atomic.h  ei_bound.h  ei_btree.c  ei_btree.h  ei_config.h  ei_core.h  ei_data_array.c  ei_data_array.h  ei_data_gen.c  ei_data_gen.h  ei_data_table.c  ei_dataflow.h  ei_datamap.h  ei_filesys.h  ei_fixed_pool.c  ei_matrix.h  ei_message.c  ei_network.h  ei_platform.c  ei_plugsys.h  ei_polynomial.h  ei_pool.c  ei_pool.h  ei_qmc.h  ei_random.h  ei_rgbe.h  ei_sincos.h  ei_slist.c  ei_srv_worker.c.egg  ei_symbol.c  ei_symbol.h  ei_timer.h  ei_ts_queue.c  ei_ts_queue.h  ei_types.h  ei_util.c  (+3 more)
trunk/MayaExporterForER/MayaExporterForER/include/eiSHADER/: CMakeLists.txt  ei_checker.cpp  ei_directlight.cpp  ei_env.cpp  ei_face_plastic.cpp  ei_imager.cpp  ei_matte.cpp  ei_metal.cpp  ei_mirror.cpp  ei_shader.h  ei_spherelight.cpp  ei_translucent.cpp  ei_volume.cpp
(+100 files in other folders)
